--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -13,7 +13,7 @@ html, body {
 	max-width: 100vw;
 	min-height: 100vh;
 	max-height: 100vh;
-	background-color: black;
+	background-color: #191D31;
 	overflow: hidden;
 }
 
