--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -6,6 +6,10 @@
 	-o-user-select: none;
 }
 
+* {
+	box-sizing: border-box;
+}
+
 html, body {
 	margin: 0;
 	padding: 0;
@@ -15,6 +19,7 @@ html, body {
 	max-height: 100vh;
 	background-color: #191D31;
 	overflow: hidden;
+	font-family: 'Saira Semi Condensed', sans-serif;
 }
 
 .game {
@@ -24,6 +29,20 @@ html, body {
 	min-height: 100vh;
 	max-height: 100vh;
 	overflow: hidden;
+}
+
+.menu {
+	display: flex;
+	background-color: rgba(255, 255, 255, 0.3);
+	color: #191D31;
+}
+
+.player {
+	display: flex;
+	width: calc(100vw / 3);
+	justify-content: center;
+	align-items: center;
+	font-size: 1.5em;
 }
 
 .elements {
