--- a/src/css/app.css
+++ b/src/css/app.css
@@ -17,19 +17,15 @@ html, body {
 	max-width: 100vw;
 	min-height: 100vh;
 	max-height: 100vh;
-	background-color: #191D31;
+	background-color: #0E0A2E;
 	overflow: hidden;
 	font-family: 'Saira Semi Condensed', sans-serif;
 	color: white;
 }
 
 .game {
-	position: absolute;
-	min-width: 100vw;
-	max-width: 100vw;
-	min-height: 100vh;
-	max-height: 100vh;
-	overflow: hidden;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .menu {
@@ -39,10 +35,9 @@ html, body {
 }
 
 .player {
-	display: flex;
-	width: calc(100vw / 3);
-	justify-content: center;
-	align-items: center;
+	position: relative;
+	height: 50vh;
+	width: calc(100vw);
 	font-size: 1.5em;
 }
 
@@ -66,13 +61,4 @@ html, body {
 	cursor: pointer;
 	font-size: 1em;
 	font-family: 'Helvetica Neue', 'sans';
-}
-
-canvas {
-	left: 50%;
-	transform: translate(-50%, 0);
-}
-
-canvas:nth-child(1) {
-	border-right: 1px solid black;
 }
