--- a/src/css/app.css
+++ b/src/css/app.css
@@ -37,9 +37,11 @@ html, body {
 }
 
 .player {
-	position: relative;
+	position: absolute;
+	left: 0;
+	top: 0;
 	height: 100vh;
-	width: 50vw;
+	width: 100vw;
 }
 
 .player {
