--- a/src/css/app.css
+++ b/src/css/app.css
@@ -11,6 +11,7 @@
 }
 
 html, body {
+	position: relative;
 	margin: 0;
 	padding: 0;
 	min-width: 100vw;
@@ -24,6 +25,8 @@ html, body {
 }
 
 .game {
+	top: 60px;
+	position: absolute;
 	display: flex;
 	flex-wrap: wrap;
     //transform: rotateX(45deg) rotateZ(45deg);
@@ -32,8 +35,24 @@ html, body {
 
 .menu {
 	display: flex;
-	background-color: rgba(255, 255, 255, 0.3);
-	color: #191D31;
+	height: 60px;
+	color: rgba(255, 255, 255, 0.5);
+}
+
+.container {
+	display: flex;
+	width: 50vw;
+}
+
+.container > div {
+	padding: 16px;
+	display: flex;
+	width: 25vw;
+}
+
+.container > div:nth-child(even) {
+	display: block;
+	text-align: right;
 }
 
 .player {
@@ -68,14 +87,4 @@ html, body {
 	cursor: pointer;
 	font-size: 1em;
 	font-family: 'Helvetica Neue', 'sans';
-}
-
-
-.clip-svg {
-    width: 0;
-    height: 0;
-}
-
-.polygon-clip-hexagon {
-    //clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 }
