--- a/src/css/app.css
+++ b/src/css/app.css
@@ -24,6 +24,13 @@ html, body {
 	color: white;
 }
 
+.separator {
+	position: fixed;
+	left: 50vw;
+	height: 100vh;
+	border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
 .game {
 	top: 60px;
 	position: absolute;
