--- a/src/css/app.css
+++ b/src/css/app.css
@@ -55,14 +55,14 @@ html, body {
 }
 
 .container:nth-child(1) {
-	width: calc(50vw - 50vw / 8 + 3px);
-	border-right: 1px solid rgba(0, 0, 0, 0.15);
+	width: calc(50vw - 50vw / 8);
+	//border-right: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .container:nth-child(2) {
 	width: calc(50vw - 50vw / 8);
-	margin-left: calc(50vw / 4 - 3px);
-	border-left: 1px solid rgba(0, 0, 0, 0.15);
+	margin-left: calc(50vw / 4);
+	//border-left: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .container > .score-player1,
