--- a/src/css/app.css
+++ b/src/css/app.css
@@ -93,11 +93,11 @@ canvas {
 	text-align: right;
 }
 
-.upkeep {
+.production {
 	font-size: 14px;
 }
 
-.upkeep-left {
+.production-left {
 	text-align: right;
 }
 
